--- a/KFQS_FORM/KFQS_Form.csproj
+++ b/KFQS_FORM/KFQS_Form.csproj
@@ -46,6 +46,12 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="MM_StockOUT.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MM_StockOUT.designer.cs">
+      <DependentUpon>MM_StockOUT.cs</DependentUpon>
+    </Compile>
     <Compile Include="MM_StockMM.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,24 @@
     </Compile>
     <Compile Include="BM_WorkList.Designer.cs">
       <DependentUpon>BM_WorkList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AP_ProductPlan[생산 계획 및 확정].cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AP_ProductPlan[생산 계획 및 확정].designer.cs">
+      <DependentUpon>AP_ProductPlan[생산 계획 및 확정].cs</DependentUpon>
+    </Compile>
+    <Compile Include="MM_STockMM_M[자재 재고관리].cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MM_STockMM_M[자재 재고관리].designer.cs">
+      <DependentUpon>MM_STockMM_M[자재 재고관리].cs</DependentUpon>
+    </Compile>
+    <Compile Include="MM_StockOut_M[자재 출고 등록].cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MM_StockOut_M[자재 출고 등록].designer.cs">
+      <DependentUpon>MM_StockOut_M[자재 출고 등록].cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -128,6 +152,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="MM_StockOUT.resx">
+      <DependentUpon>MM_StockOUT.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MM_StockMM.resx">
       <DependentUpon>MM_StockMM.cs</DependentUpon>
     </EmbeddedResource>
@@ -136,6 +163,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BM_WorkList.resx">
       <DependentUpon>BM_WorkList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AP_ProductPlan[생산 계획 및 확정].resx">
+      <DependentUpon>AP_ProductPlan[생산 계획 및 확정].cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MM_STockMM_M[자재 재고관리].resx">
+      <DependentUpon>MM_STockMM_M[자재 재고관리].cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MM_StockOut_M[자재 출고 등록].resx">
+      <DependentUpon>MM_StockOut_M[자재 출고 등록].cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
