--- a/KFQS_FORM/KFQS_Form.csproj
+++ b/KFQS_FORM/KFQS_Form.csproj
@@ -46,6 +46,36 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="PP_STockHALB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PP_STockHALB.designer.cs">
+      <DependentUpon>PP_STockHALB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PP_STockHALB_M[재공 재고조회].cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PP_STockHALB_M[재공 재고조회].designer.cs">
+      <DependentUpon>PP_STockHALB_M[재공 재고조회].cs</DependentUpon>
+    </Compile>
+    <Compile Include="PP_WCTRunStopList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PP_WCTRunStopList.designer.cs">
+      <DependentUpon>PP_WCTRunStopList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PP_WCTRunStopList_M[작업장 비가동 현황 및 사유관리].cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PP_WCTRunStopList_M[작업장 비가동 현황 및 사유관리].designer.cs">
+      <DependentUpon>PP_WCTRunStopList_M[작업장 비가동 현황 및 사유관리].cs</DependentUpon>
+    </Compile>
+    <Compile Include="PP_WorkerPerProd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PP_WorkerPerProd.designer.cs">
+      <DependentUpon>PP_WorkerPerProd.cs</DependentUpon>
+    </Compile>
     <Compile Include="PP_ActureOutPut[생산 실적 등록].cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +135,12 @@
     </Compile>
     <Compile Include="PP_STockPP_M[공정 재고관리].designer.cs">
       <DependentUpon>PP_STockPP_M[공정 재고관리].cs</DependentUpon>
+    </Compile>
+    <Compile Include="PP_WorkerPerProd_M[작업자 일별 생산 실적].cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PP_WorkerPerProd_M[작업자 일별 생산 실적].designer.cs">
+      <DependentUpon>PP_WorkerPerProd_M[작업자 일별 생산 실적].cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -170,6 +206,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="PP_STockHALB.resx">
+      <DependentUpon>PP_STockHALB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PP_STockHALB_M[재공 재고조회].resx">
+      <DependentUpon>PP_STockHALB_M[재공 재고조회].cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PP_WCTRunStopList.resx">
+      <DependentUpon>PP_WCTRunStopList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PP_WCTRunStopList_M[작업장 비가동 현황 및 사유관리].resx">
+      <DependentUpon>PP_WCTRunStopList_M[작업장 비가동 현황 및 사유관리].cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PP_WorkerPerProd.resx">
+      <DependentUpon>PP_WorkerPerProd.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PP_ActureOutPut[생산 실적 등록].resx">
       <DependentUpon>PP_ActureOutPut[생산 실적 등록].cs</DependentUpon>
     </EmbeddedResource>
@@ -199,6 +250,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PP_STockPP_M[공정 재고관리].resx">
       <DependentUpon>PP_STockPP_M[공정 재고관리].cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PP_WorkerPerProd_M[작업자 일별 생산 실적].resx">
+      <DependentUpon>PP_WorkerPerProd_M[작업자 일별 생산 실적].cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
